# goldilocks-api

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs  weather_data_model.rs
api/src/weather_data_model/: weather_api_model.rs
datamodels/: Cargo.toml
datamodels/src/: lib.rs
utils/: Cargo.toml
utils/src/: clear_areas.rs  get_areas.rs
