[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
gql_client = "1.0.7"
mongodb = "2.4.0"
serde ={version = "1.0.156", features = ["derive"]}
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }


# Each handler has to be specified as [[bin]]
[[bin]]
name = "get_areas"
path = "src/get_areas.rs"

[[bin]]
name = "clear_areas"
path = "src/clear_areas.rs"

